--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^0.26.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "elliptic": "^6.5.4",
     "express": "^4.17.3",
